add api documentation for user
